Change packaging from jar to war